# teamdeck

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  package-lock.json  package.json  release-please-config.json  renovate.json  rollup.config.mjs  tsconfig.json  tsconfig.typecheck.json
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml  security-audit.yml
agent/: PROMPT.md  backlog.md
agent/progress/: probe-dead-token-2026-06-18T02-03-57-629Z.json  probe-observe-2026-06-18T01-50-29-272Z.json  probe-observe-2026-06-18T01-58-26-742Z.json  probe-observe-2026-06-18T02-00-56-496Z.json  probe-observe-2026-06-18T02-06-12-238Z.json  probe-pair-2026-06-18T01-57-37-853Z.json  probe-pair-2026-06-18T02-35-06-898Z.json  probe-reactions-2026-06-18T02-02-52-636Z.json  probe-second-client-2026-06-18T02-04-07-907Z.json  probe-send-2026-06-18T02-03-07-718Z.json  probe-send-2026-06-18T02-03-48-293Z.json
agent/specs/: architecture.md  helper.md  protocol.md
io.github.teh-hippo.teamdeck.sdPlugin/: manifest.json
native/: Cargo.toml
native/src/: command.rs  handlers.rs  labels.rs  main.rs  meeting.rs  presence.rs  serve.rs  snapshot.rs
shared/: identity.json
src/: plugin.ts  ui.ts
tests/: helper-map.test.ts  helper-path.test.ts  helper.test.ts  presence.test.ts  protocol.test.ts  reactions.test.ts  status.test.ts  toggle.test.ts  ui.test.ts
tools/: build-helper.mjs  check-icons.mjs  gen-icons.mjs  gen-tile-icons.mjs  install-hooks.mjs  proof-gate.mjs  secret-scan.mjs  test-resolver.mjs
(+29 files in other folders)
