[package]
name = "teamdeck-helper"
version = "0.4.0"
edition = "2021"
description = "TeamDeck native helper: reads Microsoft Teams meeting state and runs control commands via Windows UI Automation."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uiautomation = "0.25"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_Registry"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
